Fetching user object and passing to dashboard, displaying some data. Added meta tags.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="application-name" content="Boulder Flash"/>
+        <meta name="author" content="woooocoder"/>
         <meta name="description" content="Rock Climbing App"/>
         <link href="./src/App.css" rel="stylesheet">
         <title>Boulder Flash</title>  
